# metastock

./: MANIFEST  README.md  pyproject.toml  setup.py
Data/Futures/Cash/: emaster  emaster.bak  master  master.bak
Data/Futures/Configuration/: data.ini
Data/Futures/Configuration/Brd/: AC.brd  ACM.brd  AD.brb  AFB.brd  ASM.brd  AWM.brd  Ab.brb  Ab.brd  Ad.brd  BAX.brd  BC.brb  BTC.brd  BTP.brd  BTP4.brd  Bc.brd  Bo.brd  Bo2.brd  Bp.brd  C.brd  C2.brd  CC2.brd  CL2.brd  CT2.brd  Cc.brd  Cd.brd  Cgb.brd  Ci.brb  Ci.brd  Cl.brd  Ct.brd  DA.brd  DAX.brd  DAX4.brd  DX2.brd  Dx.brd  ESX4.brd  ETH.brd  Ec.brd  Ed.brd  Emd.brd  (+147 more)
Data/Futures/Configuration/Downloads/: filelist.txt
Data/Futures/Continuous Contracts/Back Adjusted/: emaster  emaster.bak  master  master.bak
Data/Futures/Continuous Contracts/Spliced/: emaster  emaster.bak  master  master.bak
Data/Futures/Contracts/10-Year Bond/: emaster  emaster.bak  master  master.bak
Data/Futures/Contracts/10-Year Bond C/: emaster  emaster.bak  master  master.bak
Data/Futures/Contracts/10-Year Note C/: emaster  emaster.bak  master  master.bak
Data/Futures/Contracts/2-Year Note C/: emaster  emaster.bak  master  master.bak
Data/Futures/Contracts/3-Month SOFR/: SR3.brd  emaster  emaster.bak  master  master.bak
Data/Futures/Contracts/3-Month SONIA/: SO3.brd  emaster.bak  master.bak
Data/Futures/Contracts/3-Year Bond/: emaster  emaster.bak  (+2 more)
Data/Futures/Contracts/3-Year Bond C/: emaster  emaster.bak  master  master.bak
metastock/: metastock.py
src/metastock/: __init__.py  metastock.py
tests/: metastock-test.py
(+5122 files in other folders)
