[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metastock"
version = "0.0.2"
authors = [
  { name="Joe Trader", email="traderjoe1968@gmail.com" },
]
description = "metastock file reader"
keywords = ["metastock", ]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pandas",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov[all]",
]

[project.urls]
Homepage = "https://github.com/traderjoe1968/metastock"
repository = "https://github.com/traderjoe1968/metastock.git"
"Bug Tracker" = "https://github.com/traderjoe1968/metastock/issues"
